- 2. css초급 > table까지 완료, 박스모델 작업 중

--- a/assets/02-css/02-cssBeginner/reference.html
+++ b/assets/02-css/02-cssBeginner/reference.html
@@ -1,6 +1,6 @@
 
 	<footer class="reference_box">
-		<h2 class="tit">참조</h2>
+		<h2 class="tit">CSS 초급 참조</h2>
 		<ul class="link_lst">
 			<li class="reference"><a href="https://www.w3.org/TR/2011/REC-CSS2-20110607/ui.html" target="_blank" class="fas" title="새창열기">W3C UI</a></li>
 			<li class="reference"><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Basic_User_Interface" target="_blank" class="fas" title="새창열기">MDN User Interface</a></li>
