--- a/ukncs/tutorials/css/step01/2.5.text/2.5.vertical-align.html
+++ b/ukncs/tutorials/css/step01/2.5.text/2.5.vertical-align.html
@@ -13,7 +13,8 @@
 			dd{margin:0;border:1px solid #000;}
 			td{border:1px solid;}
 
-			/* baseline : 기본값으로 부모 요소의 기준 선(baseline)에 맞춤.
+			/*
+			baseline : 기본값으로 부모 요소의 기준 선(baseline)에 맞춤.
 			top : 요소의 맨 위를 줄에서 가장 큰 요소의 맨 위에 맞춤.
 			middle : 부모 요소 중앙에 위치. 인라인요소를 줄에서 가장 큰 요소의 중간에 정렬하지 않고 가장 작은 소문자 x 높이의 중앙에 정렬합니다.
 			bottom : 요소의 맨 아래를 줄에서 가장 낮은 요소에 맞춤.
@@ -22,7 +23,8 @@
 			text-top : 요소의 맨 위를 부모 font의 맨 위에 맞춤.
 			text-bottom : 요소의 맨 아래를 부모 font의 맨 아래에 맞춤.
 			길이값(px, cm등) : 0px는 baseline과 같은 값.
-			%(백분율) : line-height(줄간격)의 백분율, 0%는 baseline과 같은 값. */
+			%(백분율) : line-height(줄간격)의 백분율, 0%는 baseline과 같은 값.
+			*/
 		</style>
 	</head>
 	<body>
@@ -30,21 +32,21 @@
 		<dl>
 			<dt>인라인 요소의 vertical-align 사용</dt>
 			<dd>
-					<p>
-						top:<img style="vertical-align:top" src="HTML5_Styling_32.png" alt="css 로고"> 
-						middle:<img style="vertical-align:middle" src="HTML5_Styling_32.png" alt="css 로고"> 
-						bottom:<img style="vertical-align:bottom" src="HTML5_Styling_32.png" alt="css 로고"> 
-						super:<img style="vertical-align:super" src="HTML5_Styling_32.png" alt="css 로고"> 
-						sub:<img style="vertical-align:sub" src="HTML5_Styling_32.png" alt="css 로고"> 
-					</p>
-					<p>
-						text-top:<img style="vertical-align:text-top" src="HTML5_Styling_32.png" alt="css 로고"> 
-						text-bottom:<img style="vertical-align:text-bottom" src="HTML5_Styling_32.png" alt="css 로고">
-						0.2em:<img style="vertical-align:0.2em" src="HTML5_Styling_32.png" alt="css 로고"> 
-						-1em:<img style="vertical-align:-1em" src="HTML5_Styling_32.png" alt="css 로고">
-						20%:<img style="vertical-align:20%" src="HTML5_Styling_32.png" alt="css 로고"> 
-						-100%:<img style="vertical-align:-100%" src="HTML5_Styling_32.png" alt="css 로고">
-					</p>
+				<p style="background:#ddd;">
+					top:<img style="vertical-align:top" src="/ukncs/images/css/cursor/not-allowed.gif" alt="css 로고">
+					middle:<img style="vertical-align:middle" src="/ukncs/images/css/cursor/not-allowed.gif" alt="css 로고">
+					bottom:<img style="vertical-align:bottom" src="/ukncs/images/css/cursor/not-allowed.gif" alt="css 로고">
+					super:<img style="vertical-align:super" src="/ukncs/images/css/cursor/not-allowed.gif" alt="css 로고">
+					sub:<img style="vertical-align:sub" src="/ukncs/images/css/cursor/not-allowed.gif" alt="css 로고">
+				</p>
+				<p style="background:#ddd;">
+					text-top:<img style="vertical-align:text-top" src="/ukncs/images/css/cursor/not-allowed.gif" alt="css 로고">
+					text-bottom:<img style="vertical-align:text-bottom" src="/ukncs/images/css/cursor/not-allowed.gif" alt="css 로고">
+					0.2em:<img style="vertical-align:0.2em" src="/ukncs/images/css/cursor/not-allowed.gif" alt="css 로고">
+					-1em:<img style="vertical-align:-1em" src="/ukncs/images/css/cursor/not-allowed.gif" alt="css 로고">
+					20%:<img style="vertical-align:20%" src="/ukncs/images/css/cursor/not-allowed.gif" alt="css 로고">
+					-100%:<img style="vertical-align:-100%" src="/ukncs/images/css/cursor/not-allowed.gif" alt="css 로고">
+				</p>
 			</dd>
 			<dt>table cell에서의 vertical-align 사용</dt>
 			<dd>
