--- a/ukncs/tutorials/css/step01/2.6.background/2.6.background-attachment.html
+++ b/ukncs/tutorials/css/step01/2.6.background/2.6.background-attachment.html
@@ -12,14 +12,14 @@
 			dt{font-weight:bold;}
 			dd{overflow-y:auto;height:150px;margin:0;padding:10px;border:10px solid rgba(0,0,0,.5);
 				background-color:#fff;
-				background-image:url(HTML5_Styling_32.png);
+				background-image:url('/ukncs/tutorials/css/step01/2.6.background/HTML5_Styling_32.png');
 				background-repeat:no-repeat;
 				background-position:0 0;
 			}
 
 			body{height:1000px;
 				background-color:rgb(148, 153, 153);
-				background-image:url(HTML5_Styling_32.png);
+				background-image:url('/ukncs/tutorials/css/step01/2.6.background/HTML5_Styling_32.png');
 				background-repeat:no-repeat;
 				background-position:0 0;
 				background-attachment:fixed;
