--- a/ukncs/tutorials/css/step01/2.6.background/2.6.background-clip.html
+++ b/ukncs/tutorials/css/step01/2.6.background/2.6.background-clip.html
@@ -13,10 +13,10 @@
 			dt{font-weight:bold;}
 			dd{margin:0;padding:10px;border:10px solid rgba(0,0,0,.5);
 				background-color:#fff;
-				background-image:url(img_sample_notebook.jpg);
+				background-image:url('/ukncs/tutorials/css/step01/2.6.background/img_sample_notebook.jpg');
 			}
 
-		
+
 			/* background-clip */
 			.padding-box{background-clip:padding-box;}
 			.border-box{background-clip:border-box;}
