--- a/ukncs/tutorials/css/step01/2.6.background/2.6.background-image.html
+++ b/ukncs/tutorials/css/step01/2.6.background/2.6.background-image.html
@@ -13,13 +13,13 @@
 			dd{margin:0;padding:10px;border:10px solid rgba(0,0,0,.5);}
 
 			body{background-image:
-				url(logo_184.gif),
-				url(HTML5_Styling_32.png),
-				url(img_sample_notebook.jpg);
+				url('/ukncs/tutorials/css/step01/2.6.background/logo_184.gif'),
+				url('/ukncs/tutorials/css/step01/2.6.background/HTML5_Styling_32.png'),
+				url('/ukncs/tutorials/css/step01/2.6.background/img_sample_notebook.jpg');
 			}
 			/* background-image */
 			.none{background-image:none;}
-			.url{background-image:url(img_sample_flower.jpg);}
+			.url{background-image:url('/ukncs/tutorials/css/step01/2.6.background/img_sample_flower.jpg');}
 		</style>
 	</head>
 	<body>
