--- a/ukncs/tutorials/css/step01/2.6.background/2.6.background-origin.html
+++ b/ukncs/tutorials/css/step01/2.6.background/2.6.background-origin.html
@@ -13,7 +13,7 @@
 			dt{font-weight:bold;}
 			dd{margin:0;padding:10px;border:10px solid rgba(0,0,0,.5);
 				background-color:#fff;
-				background-image:url(img_sample_flower.jpg);
+				background-image:url('/ukncs/tutorials/css/step01/2.6.background/img_sample_flower.jpg');
 				background-repeat:no-repeat;
 				background-position:0 0;
 			}
