--- a/ukncs/tutorials/css/step01/2.6.background/2.6.background-position.html
+++ b/ukncs/tutorials/css/step01/2.6.background/2.6.background-position.html
@@ -13,7 +13,7 @@
 			dt{font-weight:bold;}
 			dd{margin:0;padding:10px;border:10px solid rgba(0,0,0,.5);
 				background-color:#fff;
-				background-image:url(HTML5_Styling_32.png);
+				background-image:url('/ukncs/tutorials/css/step01/2.6.background/HTML5_Styling_32.png');
 				background-repeat:no-repeat;
 			}
 
@@ -35,11 +35,11 @@
 			.cc{background-position:50% 50%;}
 			.mix{
 				background-image:
-					url(HTML5_Styling_32.png), 
-					url(HTML5_MultiMedia_32.png),
-					url(HTML5_Performance_32.png),
-					url(HTML5_Semantics_32.png),
-					url(HTML5_3D_Effects_32.png);
+					url('/ukncs/tutorials/css/step01/2.6.background/HTML5_Styling_32.png'),
+					url('/ukncs/tutorials/css/step01/2.6.background/HTML5_MultiMedia_32.png'),
+					url('/ukncs/tutorials/css/step01/2.6.background/HTML5_Performance_32.png'),
+					url('/ukncs/tutorials/css/step01/2.6.background/HTML5_Semantics_32.png'),
+					url('/ukncs/tutorials/css/step01/2.6.background/HTML5_3D_Effects_32.png');
 				background-position:
 					0 0,
 					100% 0,
