--- a/ukncs/tutorials/css/step01/2.6.background/2.6.background-repeat.html
+++ b/ukncs/tutorials/css/step01/2.6.background/2.6.background-repeat.html
@@ -11,7 +11,7 @@
 			h2{width:600px;margin:0 auto;padding:10px 0;border-bottom:2px solid #ddd;text-align:center;}
 			dl{width:600px;margin:10px auto;}
 			dt{font-weight:bold;}
-			dd{margin:0;padding:10px;border:10px solid rgba(0,0,0,.5);background-color:#fff;background-image:url(HTML5_Styling_32.png);}
+			dd{margin:0;padding:10px;border:10px solid rgba(0,0,0,.5);background-color:#fff;background-image:url('/ukncs/tutorials/css/step01/2.6.background/HTML5_Styling_32.png');}
 
 			/* background-repeat */
 			.repeat{background-repeat:repeat;}
