--- a/ukncs/tutorials/css/step01/2.6.background/2.6.background.html
+++ b/ukncs/tutorials/css/step01/2.6.background/2.6.background.html
@@ -14,16 +14,16 @@
 
 			/* background */
 			.ex1{
-				background:transparent url(img_sample_flower.jpg) no-repeat 50% 50% scroll/50%;
+				background:transparent url('/ukncs/tutorials/css/step01/2.6.background/img_sample_flower.jpg') no-repeat 50% 50% scroll/50%;
 			}
 			.ex2{
-				background:cadetblue url(img_sample_flower.jpg) no-repeat 0 0 fixed/contain;
+				background:cadetblue url('/ukncs/tutorials/css/step01/2.6.background/img_sample_flower.jpg') no-repeat 0 0 fixed/contain;
 			}
 			.ex3{
-				background:cadetblue url(img_sample_flower.jpg) no-repeat 0 0 fixed/cover;
+				background:cadetblue url('/ukncs/tutorials/css/step01/2.6.background/img_sample_flower.jpg') no-repeat 0 0 fixed/cover;
 			}
 			.ex4{
-				background:cadetblue url(img_sample_flower.jpg) no-repeat 50% 0 content-box scroll/auto 100%;
+				background:cadetblue url('/ukncs/tutorials/css/step01/2.6.background/img_sample_flower.jpg') no-repeat 50% 0 content-box scroll/auto 100%;
 			}
 		</style>
 	</head>
