--- a/ukncs/tutorials/css/step01/2.7.list/2.7.list-style-image.html
+++ b/ukncs/tutorials/css/step01/2.7.list/2.7.list-style-image.html
@@ -13,7 +13,7 @@
 
 			/* list-style-image */
 			.none{list-style-image:none;}/* 정의된 type으로 표시됨. */
-			.image{list-style-image:url(HTML5_Styling_32.png);}
+			.image{list-style-image:url('/ukncs/tutorials/css/step01/2.7.list/HTML5_Styling_32.png');}
 		</style>
 	</head>
 	<body>
