--- a/ukncs/tutorials/css/step01/2.7.list/2.7.list-style.html
+++ b/ukncs/tutorials/css/step01/2.7.list/2.7.list-style.html
@@ -12,7 +12,7 @@
 			article{width:600px;margin:10px auto;padding:10px;border:2px solid #000;}
 
 			/* list-style Shorthand */
-			.outside{list-style:georgian url('rocket.svg');}
+			.outside{list-style:georgian url('/ukncs/tutorials/css/step01/2.7.list/rocket.svg');}
 			.inside{list-style:georgian inside;}
 		</style>
 	</head>
