--- a/ukncs/tutorials/css/step01/2.5.text/2.5.text-overflow.html
+++ b/ukncs/tutorials/css/step01/2.5.text/2.5.text-overflow.html
@@ -7,15 +7,15 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>UXKM CSS text-overflow Properties</title>
 		<style>
-			h2{width:600px;margin:0 auto;padding:10px 0;border-bottom:2px solid #ddd;text-align:center;}
-			dl{width:600px;margin:10px auto;}
+			* {box-sizing:border-box;}
+			h2{width:100%;max-width:600px;margin:0 auto;padding:10px 0;border-bottom:2px solid #ddd;text-align:center;}
+			dl{width:100%;max-width:600px;margin:10px auto;}
 			dt{font-weight:bold;}
-			dd{margin:0;border:1px solid #000;}
+			dd{margin:0;padding:40px;border:1px solid #000;}
 			p{
 				overflow:hidden; /* 반드시 "visible" 이외의 값이 지정되어 있어야 한다. */
-				width:500px; /* width가 지정되어 있어야 한다. */
-				height:30px;
-				margin:40px;
+				width:100%; /* width가 지정되어 있어야 한다. */
+				line-height:30px;
 				padding:10px;
 				border-color:gray;
 				border-style:dotted;
