- 2. css초급 > 박스모델 작업 중

--- a/assets/02-css/02-cssBeginner/09-css_boxmodel.html
+++ b/assets/02-css/02-cssBeginner/09-css_boxmodel.html
@@ -818,11 +818,11 @@
 		<article class="mt_l indent">
 			<h3 class="ml_mn"><i class="t_blue">box-sizing</i> 속성</h3>
 			<p class="mt_s">
-				box-sizing 속성은 요소의 너비와 높이를 계산하는 방법을 지정합니다.
-				box-sizing 속성의 기본값은 content-box 입니다.
-				이는 width, height 속성의 대상 영역이 content 영역을 의미합니다.
+				box-sizing 속성은 요소의 너비와 높이를 계산하는 방법을 지정합니다.<br>
+				box-sizing 속성의 기본값은 content-box 입니다.<br>
+				이는 width, height 속성의 대상 영역이 content 영역을 의미합니다.<br>
 				box-sizing 속성의 값을 border-box로 지정하면 마진을 제외한 박스 모델 전체를
-				width, height 속성의 대상 영역으로 지정할 수 있어서 CSS Layout을 직관적으로 사용할 수 있게 합니다.
+				width, height 속성의 대상 영역으로 지정할 수 있어서 CSS Layout을 직관적으로 사용할 수 있게 합니다.<br>
 				box-sizing 속성은 상속되지 않습니다. 따라서 box-sizing 속성을 사용하도록 초기화하려면 아래와 같이 정의합니다.
 			</p>
 			<p class="mt_s">
