--- a/assets/02-css/02-cssBeginner/09-css_boxmodel.html
+++ b/assets/02-css/02-cssBeginner/09-css_boxmodel.html
@@ -864,13 +864,14 @@
 
 	<!-- 2.9.1~6. 박스 모델 테스트 -->
 	<section class="indent mt_lm">
-		<h2 class="ml_mn">2.9.1~6. <i class="t_blue">박스 모델 테스트</i></h2>
+		<h2 class="ml_mn">2.9.1 ~ 6. <i class="t_blue">박스 모델 테스트</i></h2>
 		<p class="mt_s">
-			위에 설명된 속성(width, height, margin, padding, border, border-radius)이 <i class="t_blue">box-sizing</i>의 속성 기준으로 어떤 차이점이 있는지 활인할 수 있습니다.<br>
+			위에 설명된 속성(<i class="t_blue">width</i>, <i class="t_blue">height</i>, <i class="t_blue">margin</i>, <i class="t_blue">padding</i>, <i class="t_blue">border</i>, <i class="t_blue">border-radius</i>)이
+			<i class="t_blue">box-sizing</i>의 속성 기준으로 어떤 차이점이 있는지 활인할 수 있습니다.<br>
 			각 속성을 좌·우로 드레그하여 테스트해보세요.<br>
 			<span class="reference mt_l">테스트기 출처 : <a href="http://921430km.com/_temp/transform/box_model.php" target="_blank" title="새창열림">http://921430km.com/box_model</a></span>
 		</p>
-		<div class="iframe_con mt_s">
+		<div class="iframe_con mt_m">
 			<iframe class="box_model_iframe" src="/assets/kmtemp/transform/box_model.html" width="100%" height="100%" scrolling="no"></iframe>
 		</div>
 	</section>
