--- a/assets/kmtemp/transform/box_model.html
+++ b/assets/kmtemp/transform/box_model.html
@@ -17,15 +17,15 @@
 	<meta http-equiv="Expires" content="-1">
 
 	<!-- css -->
-	<link href="../_css/bootstrap.css" rel="stylesheet" />
-	<link href="../_css/animate.min.css" rel="stylesheet" />
+	<link href="/assets/kmtemp/_css/bootstrap.css" rel="stylesheet" />
+	<link href="/assets/kmtemp/_css/animate.min.css" rel="stylesheet" />
 	<link href="/assets/lib/css/temp_transform.css" rel="stylesheet" />
 	<!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script><!--// 구글 제이쿼리 //-->
-	<script src="../_js/ukDetect-1.0.0.js"></script>
+	<script src="/assets/kmtemp/_js/ukDetect-1.0.0.js"></script>
 </head>
 <body>
 <div class="wrap">
@@ -96,6 +96,6 @@
 </div>
 <!-- //wrap -->
 
-<script src="js/js.js"></script>
+<script src="/assets/kmtemp/transform/js/js.js"></script>
 </body>
 </html>
