- 2. css초급 > 박스모델 작업 중

--- a/assets/kmtemp/transform/box_model.html
+++ b/assets/kmtemp/transform/box_model.html
@@ -20,11 +20,8 @@
 	<link href="/assets/kmtemp/_css/bootstrap.css" rel="stylesheet" />
 	<link href="/assets/kmtemp/_css/animate.min.css" rel="stylesheet" />
 	<link href="/assets/lib/css/temp_transform.css" rel="stylesheet" />
-	<!--[if lt IE 9]>
-	<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script><!--// 구글 제이쿼리 //-->
+
+	<script type="text/javascript" src="/assets/kmtemp/_js/jquery-1.9.1.min.js"></script><!--// 구글 제이쿼리 //-->
 	<script src="/assets/kmtemp/_js/ukDetect-1.0.0.js"></script>
 </head>
 <body>
