- 2. css초급 > 박스모델 작업 중

--- a/assets/02-css/02-cssBeginner/09-css_boxmodel.html
+++ b/assets/02-css/02-cssBeginner/09-css_boxmodel.html
@@ -872,7 +872,7 @@
 			<span class="reference mt_l">테스트기 출처 : <a href="http://921430km.com/_temp/transform/box_model.php" target="_blank" title="새창열림">http://921430km.com/box_model</a></span>
 		</p>
 		<div class="iframe_con mt_m">
-			<iframe class="box_model_iframe" src="/assets/kmtemp/transform/box_model.html" width="100%" height="100%" scrolling="no"></iframe>
+			<iframe class="box_model_iframe" src="https://uxkm.github.io/assets/kmtemp/transform/box_model.html" width="100%" height="100%" scrolling="no"></iframe>
 		</div>
 	</section>
 
