--- a/assets/kmtemp/transform/box_model.html
+++ b/assets/kmtemp/transform/box_model.html
@@ -17,12 +17,12 @@
 	<meta http-equiv="Expires" content="-1">
 
 	<!-- css -->
-	<link href="/assets/kmtemp/_css/bootstrap.css" rel="stylesheet" />
-	<link href="/assets/kmtemp/_css/animate.min.css" rel="stylesheet" />
-	<link href="/assets/lib/css/temp_transform.css" rel="stylesheet" />
+	<link href="https://uxkm.github.io/assets/kmtemp/_css/bootstrap.css" rel="stylesheet" />
+	<link href="https://uxkm.github.io/assets/kmtemp/_css/animate.min.css" rel="stylesheet" />
+	<link href="https://uxkm.github.io/assets/lib/css/temp_transform.css" rel="stylesheet" />
 
-	<script type="text/javascript" src="/assets/kmtemp/_js/jquery-1.9.1.min.js"></script><!--// 구글 제이쿼리 //-->
-	<script src="/assets/kmtemp/_js/ukDetect-1.0.0.js"></script>
+	<script type="text/javascript" src="https://uxkm.github.io/assets/kmtemp/_js/jquery-1.9.1.min.js"></script><!--// 구글 제이쿼리 //-->
+	<script src="https://uxkm.github.io/assets/kmtemp/_js/ukDetect-1.0.0.js"></script>
 </head>
 <body>
 <div class="wrap">
@@ -93,6 +93,6 @@
 </div>
 <!-- //wrap -->
 
-<script src="/assets/kmtemp/transform/js/js.js"></script>
+<script src="https://uxkm.github.io/assets/kmtemp/transform/js/js.js"></script>
 </body>
 </html>
