- 2. css초급 > 박스모델 작업 중

--- a/assets/kmtemp/transform/box_model.html
+++ b/assets/kmtemp/transform/box_model.html
@@ -21,7 +21,7 @@
 	<link href="https://uxkm.github.io/assets/kmtemp/_css/animate.min.css" rel="stylesheet" />
 	<link href="https://uxkm.github.io/assets/lib/css/temp_transform.css" rel="stylesheet" />
 
-	<script type="text/javascript" src="https://uxkm.github.io/assets/kmtemp/_js/jquery-1.9.1.min.js"></script><!--// 구글 제이쿼리 //-->
+	<script type="text/javascript" src="https://uxkm.github.io/assets/kmtemp/_js/jquery-1.9.1.min.js"></script>
 	<script src="https://uxkm.github.io/assets/kmtemp/_js/ukDetect-1.0.0.js"></script>
 </head>
 <body>
