- 2. css초급 > 박스모델 작업 중

--- a/assets/02-css/02-cssBeginner/09-css_boxmodel.html
+++ b/assets/02-css/02-cssBeginner/09-css_boxmodel.html
@@ -876,33 +876,67 @@
 		</div>
 	</section>
 
+	<!-- 2.9.7. 박스 그림자(box-shadow)를 제어하는​속성 -->
+	<section class="txt_ex indent mt_lm">
+		<h2 class="ml_mn css3">2.9.6. 박스 그림자(<i class="t_blue">box-shadow</i>)를 제어하는​속성</h2>
+		<p class="mt_s">
+			CSS Module Level 3<br>
+			요소에 그림자 효과를 부여하여 스타일을 지정할 수 있는데, 박스의 그림자를 box-shadow로 지정할 수 있다.
+		</p>
 
+		<article class="mt_l indent">
+			<h3 class="ml_mn"><i class="t_blue">box-shadow</i> 속성</h3>
+			<p class="mt_s">
+				box-shadow 속성은 해당 HTML 요소에 간단히 그림자 효과를 적용해 줍니다.<br>
+				box-shadow 속성은 콤마(,)로 구분하여 여러형식의 box-shadow속성을 지정할 수 있습니다.<br>
+				그림자가 시작할 x축과 y축의 상대 위치를 명시하고, 그림자의 흐린 정도를 나타내는 blur 값을 명시합니다.
+			</p>
+			<p class="mt_s">
+				<code>box-shadow : none | inset | position-x | position-y | blur | spread | color | inherit</code>
+			</p>
+			<div class="ol_lst indent mt_s">
+				<ol>
+					<li><strong class="t_black">none</strong> : 기본값으로 그림자 효과를 없앱니다.</li>
+					<li><strong class="t_black">inset</strong> : inset 키워드를 지정하면 그림자가 요소 안쪽에 위치하며 생략 가능.</li>
+					<li><strong class="t_black">Horizontal-offset</strong> : 양수값으로 지정하면 오른쪽으로 지정값만큼 이동, 음수값으로 지정하면 왼쪽으로 지정값만큼 이동.</li>
+					<li><strong class="t_black">Vertical-offset</strong> : 양수값으로 지정하면 아래쪽으로 지정값만큼 이동, 음수값으로 지정하면 위쪽으로 지정값만큼 이동.</li>
+					<li><strong class="t_black">blur</strong> : 그림자의 흐림정도를 지정한다. 값이 클 수록 더욱 흐려짐. 생략 가능.</li>
+					<li><strong class="t_black">spread</strong> : 그림자의 확장여부 결정. 양수이면 확대, 음수이면 축소 생략 가능.</li>
+					<li><strong class="t_black">color</strong> : 그림자의 색상(color)을 지정하며 생략 가능.</li>
+				</ol>
+			</div>
+		</article>
 
-	<!--
-	<section class="view_editor edit_code mt_l" data-target="css/step01/2.8.table/2.8.table.html">
-		<h2 class="ve_tit">예제</h2>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
-			<div class="code_wrap"><textarea></textarea></div>
-		</div>
+		<article class="view_editor edit_code mt_m" data-target="css/step01/2.9.box-model/2.9.7.box-shadow.html">
+			<h3 class="ve_tit sound_only">예제</h3>
+			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+				<div class="code_wrap"><textarea></textarea></div>
+			</div>
+		</article>
+
+		<aside class="browser_support mt_l" data-tit="box-shadow">
+			<ul>
+				<li class="ie">9+</li>
+				<li class="edge">12.0</li>
+				<li class="chrome">10.0</li>
+				<li class="firefox">4.0</li>
+				<li class="opera">10.5</li>
+				<li class="safari">5.1</li>
+			</ul>
+		</aside>
 	</section>
-
-	<aside class="browser_support mt_l" data-tit="Table-style">
-		<ul>
-			<li class="ie">5+</li>
-			<li class="edge">12.0</li>
-			<li class="chrome">1.0</li>
-			<li class="firefox">1.0</li>
-			<li class="opera">4.0</li>
-			<li class="safari">1.2</li>
-		</ul>
-	</aside>
 
 	<section class="reference_box mt_l">
-		<h2 class="tit">Table 속성 참조</h2>
+		<h2 class="tit">박스 모델 속성 참조</h2>
 		<ul class="link_lst">
-			<li class="reference"><a href="https://www.w3.org/TR/2011/REC-CSS2-20110607/tables.html" target="_blank" class="fas" title="새창열림">W3C Table</a></li>
-			<li class="reference"><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Table" target="_blank" class="fas" title="새창열림">MDN Table</a></li>
+			<li class="reference"><a href="00000000000000" target="_blank" class="fas" title="새창열림">00000000000000</a></li>
+			<li class="reference"><a href="00000000000000" target="_blank" class="fas" title="새창열림">00000000000000</a></li>
+			<li class="reference"><a href="00000000000000" target="_blank" class="fas" title="새창열림">00000000000000</a></li>
+			<li class="reference"><a href="00000000000000" target="_blank" class="fas" title="새창열림">00000000000000</a></li>
+			<li class="reference"><a href="00000000000000" target="_blank" class="fas" title="새창열림">00000000000000</a></li>
+			<li class="reference"><a href="00000000000000" target="_blank" class="fas" title="새창열림">00000000000000</a></li>
+			<li class="reference"><a href="00000000000000" target="_blank" class="fas" title="새창열림">00000000000000</a></li>
 		</ul>
 	</section>
-	-->
+
 
