--- a/assets/02-css/02-cssBeginner/09-css_boxmodel.html
+++ b/assets/02-css/02-cssBeginner/09-css_boxmodel.html
@@ -862,23 +862,9 @@
 		</aside>
 	</section>
 
-	<!-- 2.9.1~6. 박스 모델 테스트 -->
-	<section class="indent mt_lm">
-		<h2 class="ml_mn">2.9.1 ~ 6. <i class="t_blue">박스 모델 테스트</i></h2>
-		<p class="mt_s">
-			위에 설명된 속성(<i class="t_blue">width</i>, <i class="t_blue">height</i>, <i class="t_blue">margin</i>, <i class="t_blue">padding</i>, <i class="t_blue">border</i>, <i class="t_blue">border-radius</i>)이
-			<i class="t_blue">box-sizing</i>의 속성 기준으로 어떤 차이점이 있는지 확인할 수 있습니다.<br>
-			각 속성을 좌·우로 드래그하여 테스트해보세요.<br>
-			<span class="reference mt_l">테스트기 출처 : <a href="http://921430km.com/_temp/transform/box_model.php" target="_blank" title="새창열림">http://921430km.com/box_model</a></span>
-		</p>
-		<div class="iframe_con mt_m">
-			<iframe class="box_model_iframe" src="/assets/kmtemp/transform/box_model.html" width="100%" height="100%" scrolling="no"></iframe>
-		</div>
-	</section>
-
 	<!-- 2.9.7. 박스 그림자(box-shadow)를 제어하는​속성 -->
 	<section class="txt_ex indent mt_lm">
-		<h2 class="ml_mn css3">2.9.6. 박스 그림자(<i class="t_blue">box-shadow</i>)를 제어하는​속성</h2>
+		<h2 class="ml_mn css3">2.9.7. 박스 그림자(<i class="t_blue">box-shadow</i>)를 제어하는​속성</h2>
 		<p class="mt_s">
 			CSS Module Level 3<br>
 			요소에 그림자 효과를 부여하여 스타일을 지정할 수 있는데, 박스의 그림자를 box-shadow로 지정할 수 있다.
@@ -926,16 +912,28 @@
 		</aside>
 	</section>
 
+	<!-- 2.9.8. 박스 모델 테스트 -->
+	<section class="indent mt_lm">
+		<h2 class="ml_mn">2.9.8. <i class="t_blue">박스 모델 테스트</i></h2>
+		<p class="mt_s">
+			위에 설명된 속성(<i class="t_blue">width</i>, <i class="t_blue">height</i>, <i class="t_blue">margin</i>, <i class="t_blue">padding</i>, <i class="t_blue">border</i>, <i class="t_blue">border-radius</i>)이
+			<i class="t_blue">box-sizing</i>의 속성 기준으로 어떤 차이점이 있는지 확인할 수 있습니다.<br>
+			각 속성을 좌·우로 드래그하여 테스트해보세요.<br>
+			<span class="reference mt_l">테스트기 출처 : <a href="http://921430km.com/_temp/transform/box_model.php" target="_blank" title="새창열림">http://921430km.com/box_model</a></span>
+		</p>
+		<div class="iframe_con mt_m">
+			<iframe class="box_model_iframe" src="/assets/kmtemp/transform/box_model.html" width="100%" height="100%" scrolling="no"></iframe>
+		</div>
+	</section>
+
 	<section class="reference_box mt_l">
 		<h2 class="tit">박스 모델 속성 참조</h2>
 		<ul class="link_lst">
-			<li class="reference"><a href="00000000000000" target="_blank" class="fas" title="새창열림">00000000000000</a></li>
-			<li class="reference"><a href="00000000000000" target="_blank" class="fas" title="새창열림">00000000000000</a></li>
-			<li class="reference"><a href="00000000000000" target="_blank" class="fas" title="새창열림">00000000000000</a></li>
-			<li class="reference"><a href="00000000000000" target="_blank" class="fas" title="새창열림">00000000000000</a></li>
-			<li class="reference"><a href="00000000000000" target="_blank" class="fas" title="새창열림">00000000000000</a></li>
-			<li class="reference"><a href="00000000000000" target="_blank" class="fas" title="새창열림">00000000000000</a></li>
-			<li class="reference"><a href="00000000000000" target="_blank" class="fas" title="새창열림">00000000000000</a></li>
+			<li class="reference"><a href="https://www.w3.org/TR/2011/REC-CSS2-20110607/box.html#box-model" target="_blank" class="fas" title="새창열림">W3C Box Model</a></li>
+			<li class="reference"><a href="https://drafts.csswg.org/css-box-3" target="_blank" class="fas" title="새창열림">Draft, CSS Box Model Module Level 3</a></li>
+			<li class="reference"><a href="https://drafts.csswg.org/css-ui-3/#box-sizing" target="_blank" class="fas" title="새창열림">CSS Basic User Interface Module Level 3</a></li>
+			<li class="reference"><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Box_Model" target="_blank" class="fas" title="새창열림">MDN Box Model</a></li>
+			<li class="reference"><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/border-radius" target="_blank" class="fas" title="새창열림">MDN border-radius</a></li>
 		</ul>
 	</section>
 
