--- a/assets/01-html/01-htmlStart/01-html_start.html
+++ b/assets/01-html/01-htmlStart/01-html_start.html
@@ -8,8 +8,8 @@
 		<h2 class="sound_only">요약 설명</h2>
 		<p>HTML은 1989년부터 Tim Berners-Lee, Robert Cailliau 등의 사람들에 의해 처음 만들어져 사용되기 시작되었습니다.</p>
 		<p>HTML은 프로그래밍 언어가 아닙니다. 콘텐츠의 구조를 정의하는 마크업 언어입니다.</p>
-		<p>HTML은 콘텐츠의 서로 다른 부분들을 씌우거나(Wrap) 감싸서(Enclose) 다른 형식으로 보이게 하거나 특정한 방식으로 동작하도록 하는 일련의 요소(Elements)로 이루어져 있습니다.</p>
-		<p>tags로 감싸는 것으로 단어나 이미지를 다른 어딘가로 하이퍼링크(Hyperlink)하거나 단어들을 이탤릭체로 표시하고 글씨체를 크게 또는 작게 만드는 등의 일을 할 수 있습니다.</p>
+		<p>HTML은 콘텐츠의 서로 다른 부분들을 씌우거나(wrap) 감싸서(enclose) 다른 형식으로 보이게 하거나 특정한 방식으로 동작하도록 하는 일련의 요소(elements)로 이루어져 있습니다.</p>
+		<p>tags로 감싸는 것으로 단어나 이미지를 다른 어딘가로 하이퍼링크(hyperlink)하거나 단어들을 이탤릭체로 표시하고 글씨체를 크게 또는 작게 만드는 등의 일을 할 수 있습니다.</p>
 		<p>마크업 언어는 컴퓨터가 텍스트를 처리하고 표시되는 방법을 제어하기 위한 소통 방법입니다. 이를 위해 HTML은 tags와 attributes라는 두 가지를 사용합니다.</p>
 	</blockquote>
 
@@ -23,7 +23,7 @@
 			<li>월드와이드웹(WWW, World-Wide Web)의 가장 기초적인 구성요소입니다.</li>
 			<li>HTML은 웹 콘텐츠의 의미와 구조를 정의하는 기능을 합니다.</li>
 			<li>하이퍼텍스트(HyperText)는 웹 페이지 또는 웹 사이트들을 서로 참조하고 연결하는 링크(Link)를 말합니다.</li>
-			<li>HTML의 마크업(Markup)은 태그를 통해 텍스트, 이미지 등의 내용을 표시함을 의미합니다.</li>
+			<li>HTML의 마크업(markup)은 태그를 통해 텍스트, 이미지 등의 내용을 표시함을 의미합니다.</li>
 			<li>HTML은 웹 브라우저가 해석하여 텍스트, 이미지, 동영상 등의 내용을 화면에 표시합니다.</li>
 			<li>대표적인 웹 브라우저로는 인터넷 익스플로러(IE), 엣지(Edge), 크롬(Chrome), 사파리(Safari), 파이어폭스(Firefox), 오페라(Opera) 등이 있습니다.</li>
 		</ol>
