--- a/assets/01-html/01-htmlStart/01-html_start.html
+++ b/assets/01-html/01-htmlStart/01-html_start.html
@@ -22,7 +22,7 @@
 			<li>각각의 HTML 태그는 웹 페이지의 디자인이나 기능을 결정하는데 사용됩니다.</li>
 			<li>월드와이드웹(WWW, World-Wide Web)의 가장 기초적인 구성요소입니다.</li>
 			<li>HTML은 웹 콘텐츠의 의미와 구조를 정의하는 기능을 합니다.</li>
-			<li>하이퍼텍스트(HyperText)는 웹 페이지 또는 웹 사이트들을 서로 참조하고 연결하는 링크(Link)를 말합니다.</li>
+			<li>하이퍼텍스트(HyperText)는 웹 페이지 또는 웹 사이트들을 서로 참조하고 연결하는 링크(link)를 말합니다.</li>
 			<li>HTML의 마크업(markup)은 태그를 통해 텍스트, 이미지 등의 내용을 표시함을 의미합니다.</li>
 			<li>HTML은 웹 브라우저가 해석하여 텍스트, 이미지, 동영상 등의 내용을 화면에 표시합니다.</li>
 			<li>대표적인 웹 브라우저로는 인터넷 익스플로러(IE), 엣지(Edge), 크롬(Chrome), 사파리(Safari), 파이어폭스(Firefox), 오페라(Opera) 등이 있습니다.</li>
