--- a/assets/01-html/02-blockInline/note.html
+++ b/assets/01-html/02-blockInline/note.html
@@ -2,7 +2,7 @@
 <blockquote class="uk_note" role="note">
 	<h2 class="sound_only">요약 설명</h2>
 	<ul>
-		<li>HTML에는 두 가지 종류의 요소(Element)가 있습니다. 블록 레벨 요소(Block level element)와 인라인 요소(Inline element)입니다.</li>
+		<li>HTML에는 두 가지 종류의 요소(element)가 있습니다. 블록 레벨 요소(block level element, 이후 블록 요소로 통칭)와 인라인 레벨 요소(inline level element, 이후 인라인 요소로 통칭)입니다.</li>
 		<li>HTML의 모든 요소는 해당 요소가 웹 브라우저에 어떻게 보이는가를 결정짓는 display 속성을 가집니다.</li>
 		<li>대부분의 HTML 요소는 이러한 display 속성값으로 대표적으로 block, inline 두 가지 값 중 하나를 가지게 됩니다.</li>
 		<li>단, table의 기본 속성값은 다르게 이루어집니다.</li>
