--- a/assets/01-html/04-grouping/01-main_element.html
+++ b/assets/01-html/04-grouping/01-main_element.html
@@ -14,10 +14,10 @@
 		</p>
 		<ol class="indent mt_s">
 			<li>
-				<code>&lt;main&gt;</code> 요소의 콘텐츠는 사이드바나, 내비게이션 링크, 저작권 정보, 사이트 로고,
+				<code>&lt;main&gt;</code> 요소의 콘텐츠는 사이드 바나, 내비게이션 링크, 저작권 정보, 사이트 로고,
 				(문서의 주요 기능이 검색 폼이 아닐 경우)검색 폼과 같은 모든 문서에 반복적으로 있는 어떠한 콘텐츠라도 제외되어야 하며 문서 안에 가장 유일한 요소여야 합니다.
 			</li>
-			<li>한 문서에 반복적으로 사용하는 경우 hidden 속성으로 표시하여 사용해야 함.</li>
+			<li>한 문서에 반복적으로 사용하는 경우 hidden 속성으로 표시하여 사용해야 합니다.</li>
 			<li>hidden 속성 없이는 문서에 하나보다 많은 <code>&lt;main&gt;</code> 요소가 존재해선 안됩니다.</li>
 		</ol>
 	</section>
