--- a/assets/01-html/04-grouping/02-p_element.html
+++ b/assets/01-html/04-grouping/02-p_element.html
@@ -16,14 +16,14 @@
 			<code>&lt;pre&gt;</code>, <code>&lt;section&gt;</code>, <code>&lt;table&gt;</code>, <code>&lt;ul&gt;</code>, <code>&lt;p&gt;</code>
 			요소가 위치하는 경우 또는, 부모 태그의 콘텐츠가 더 존재하지 않고 부모가 <code>&lt;a&gt;</code> 요소가 아닐 때 생략할 수 있습니다.
 			<br>
-			습관적으로 종료 태그는 사용 해주는것을 권장합니다.
+			종료 태그를 사용하는 것에 대한 습관을 들이는 것을 권장합니다.
 		</p>
 	</blockquote>
 
 	<section class="ol_lst mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			단락(Paragraph)이란 내용상 끊어서 구분할 수 있는 하나하나의 부분을 의미하며, 문단이라고도 부릅니다.<br>
+			단락(paragraph)이란 내용상 끊어서 구분할 수 있는 하나하나의 부분을 의미하며, 문단이라고도 부릅니다.<br>
 			HTML에서는 <code>&lt;p&gt;</code>태그를 이용하여 이러한 단락을 표현합니다.<br>
 			브라우저 기본 스타일은 문단끼리 한 줄의 간격으로 분리합니다. 첫 줄 들여쓰기 등 다른 구분 방법은 CSS를 통해 사용할 수 있습니다.
 		</p>
