--- a/assets/01-html/04-grouping/03-ol_element.html
+++ b/assets/01-html/04-grouping/03-ol_element.html
@@ -9,13 +9,13 @@
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
 			순서가 있는 목록(정렬된 리스트의 항목들)을 나타냅니다.<br>
-			일반적으로, 정렬된 리스트의 항목들은 앞에 번호와 함께 표시되며, 이 번호는 순자,문자,로마 숫자,간단한 점과 같이 어떤 형태로든 나타날수 있습니다.<br>
-			단, CSS에서 스타일이 조절되었으면 html 속성은 적용이 안 됩니다.
+			일반적으로, 정렬된 리스트의 항목들은 앞에 번호와 함께 표시되며, 이 번호는 순자, 문자, 로마 숫자, 간단한 점과 같이 어떤 형태로든 나타날수 있습니다.<br>
+			단, CSS에서 스타일이 설정된 경우, html 속성은 적용이 안 됩니다.
 		</p>
 	</section>
 
 	<section class="txt_ex mt_l">
-		<h2>4.3.1. ol(Ordered List) 속성</h2>
+		<h2>4.3.1. ol(ordered list) 속성</h2>
 
 		<article class="txt_ex indent_max mt_m">
 			<h3 class="ml_mn">[reversed] <span class="t_blue">&lt;ol reversed&gt;</span></h3>
@@ -56,7 +56,7 @@
 			<h3 class="ml_mn">[type] <span class="t_blue">&lt;ol type=&quot;1 | a | A | i | I&quot;&gt;</span></h3>
 			<p class="mt_s">
 				목록 항목의 마커의 종류.<br>
-				<code>&lt;li&gt;</code>요소 내에서 다른 속성을 사용 하지 않으면 유형 목록이 전체 목록에 사용됩니다.<br>
+				<code>&lt;li&gt;</code>요소 내에서 다른 속성을 사용하지 않으면 유형 목록이 전체 목록에 사용됩니다.<br>
 				이 속성은 HTML4에서 더 이상 사용되지 않지만 HTML5에서 다시 도입되었습니다.
 			</p>
 			<div class="ol_lst indent mt_sm">
