--- a/assets/01-html/04-grouping/06-dl_element.html
+++ b/assets/01-html/04-grouping/06-dl_element.html
@@ -8,8 +8,8 @@
 	<section class="mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			정의 목록(Definition List)은 용어와 그 뜻을 나열할 때 사용합니다.<br>
-			정의 목록은 <code>&lt;dl&gt;</code>로, 용어는 <code>&lt;dt&gt;</code>로, 그 뜻은 <code>&lt;dd&gt;</code>로 만듭니다.
+			정의 목록(definition list)은 용어와 용어에 대한 설명을 나열할 때 사용합니다.<br>
+			정의 목록은 <code>&lt;dl&gt;</code>로, 용어는 <code>&lt;dt&gt;</code>로, 용어에 대한 설명은 <code>&lt;dd&gt;</code>로 표기합니다.
 		</p>
 	</section>
 
