--- a/assets/01-html/04-grouping/08-dd_element.html
+++ b/assets/01-html/04-grouping/08-dd_element.html
@@ -9,9 +9,9 @@
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
 			정의 목록 요소(<code>&lt;dl&gt;</code>)에서 용어의 정의를 나타냅니다.<br>
-			이것은 정의 목록 요소의 자식 요소로서만 등장할수 있으며, <code>&lt;dt&gt;</code>뒤에 요소가 따라와야합니다.<br>
-			종료 태그는 이 요소 바로 뒤에 다른 <code>&lt;dd&gt;</code> 요소가 있거나, 부모 요소에 더 이상 다른 요소가 없을 경우 생략 가능함.<br>
-			습관적으로 종료 태그는 사용 해주는것을 권장합니다.
+			이것은 정의 목록 요소의 자식 요소로서만 등장할 수 있으며, <code>&lt;dt&gt;</code>뒤에 요소가 따라와야합니다.<br>
+			종료 태그는 이 요소 바로 뒤에 다른 <code>&lt;dd&gt;</code> 요소가 있거나, 부모 요소에 더 이상 다른 요소가 없을 경우 생략 가능합니다.<br>
+			종료 태그를 사용하는 것에 대한 습관을 들이는 것을 권장합니다.
 		</p>
 	</section>
 
