--- a/assets/01-html/04-grouping/07-dt_element.html
+++ b/assets/01-html/04-grouping/07-dt_element.html
@@ -12,6 +12,7 @@
 			이 요소는 <code>&lt;dl&gt;</code> 요소의 자식으로서만 사용할 수 있습니다.<br>
 			보통 이것은 <code>&lt;dd&gt;</code>요소 전에 나오는데, 연속적으로 나오는 여러 개의 <code>&lt;dt&gt;</code>요소는
 			바로 다음에 나오는 <code>&lt;dd&gt;</code>요소에 의해 정의되는 몇 개의 용어를 가리킵니다.<br>
+			<code>&lt;dd&gt;</code>요소 없이 <code>&lt;dt&gt;</code>요소 단독으로는 사용할 수 없습니다.<br>
 			종료 태그는 이 요소 바로 뒤에 다른 <code>&lt;dd&gt;</code> 태그가 따라오거나, 부모 요소에 더 이상 다른 요소가 없을떄 생략 가능합니다.<br>
 			종료 태그를 사용하는 것에 대한 습관을 들이는 것을 권장합니다.
 		</p>
