--- a/assets/01-html/04-grouping/10-figure_element.html
+++ b/assets/01-html/04-grouping/10-figure_element.html
@@ -9,16 +9,16 @@
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
 			<code>&lt;figure&gt;</code> 요소는 독립적인 콘텐츠를 표현합니다.<br>
-			흔히 설명(<code>&lt;figcaption&gt;</code>) 과 함께 사용되며, 보통 단일적으로 참조됩니다.
+			흔히 설명(<code>&lt;figcaption&gt;</code>)과 함께 사용되며, 보통 단일적으로 참조됩니다.
 		</p>
 		<ol class="indent mt_s">
 			<li>보통 <code>&lt;figure&gt;</code>는 주 문서에 영향을 주지 않으면서 다른 부분이나 부록으로 옮길 수 있는, 주 문서에서 참조하는 사진, 도표, 삽화, 오디오, 비디오, 코드 등입니다.</li>
 			<li><code>&lt;figure&gt;</code>는 섹션 루트로, 안쪽 내용은 주 문서의 내용에서 배제됩니다.</li>
-			<li>안에 (첫번째나 마지막 자식으로) <code>&lt;figcaption&gt;</code>을 넣어서 설명을 <code>&lt;figure&gt;</code> 요소와 연관지을 수 있습니다.</li>
+			<li>안에 (첫번째나 마지막 자식으로)<code>&lt;figcaption&gt;</code>을 넣어서 설명을 <code>&lt;figure&gt;</code> 요소와 연관지을 수 있습니다.</li>
 			<li>
 				<code>&lt;figure&gt;</code>와 <code>&lt;aside&gt;</code> 차이
 				<div class="line_code mt_sm">
-					<p>내용이 단순히 관련돼(느슨하게) 있고, 필수적인 내용이 아니면 <mark><code>&lt;aside&gt;</code></mark></p>
+					<p>내용이 단순히 관련되어(느슨하게) 있고, 필수적인 내용이 아니면 <mark><code>&lt;aside&gt;</code></mark></p>
 					<p>내용이 직접적인 관련이 있지만, 문맥상 그것의 위치가 중요하지 않으면 <mark><code>&lt;figure&gt;</code></mark></p>
 				</div>
 			</li>
