--- a/assets/01-html/04-grouping/12-pre_element.html
+++ b/assets/01-html/04-grouping/12-pre_element.html
@@ -8,12 +8,12 @@
 	<section class="mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			<code>&lt;pre&gt;</code> 요소는 미리 서식이 지정된 텍스트를 나타냅니다(Mark-up).<br>
+			<code>&lt;pre&gt;</code> 요소는 미리 서식이 지정된 텍스트를 나타냅니다(mark-up).<br>
 			이 요소 내의 텍스트는 대게 파일에 쓰여졌던 그대로 (요소 밖 텍스트와는) 비례하지 않는 글꼴로 표시됩니다.<br>
-			이 요소 내 빈 칸(white-space) 또한 타이핑한대로 입력됩니다.<br>
+			이 요소 내 빈 칸(white-space) 또한 타이핑한 상태 그대로 입력됩니다.<br>
 			<code>&lt;pre&gt;</code>요소를 <code>&lt;code&gt;</code>요소와 함께 사용할 수 있습니다.
 			컴퓨터 출력 블록을 나타 내기 위해 <code>&lt;pre&gt;</code>요소를 <code>&lt;samp&gt;</code>요소와 함께 사용할 수 있습니다.<br>
-			마찬가지로 <code>&lt;kbd&gt;</code>요소 내에서 <code>&lt;pre&gt;</code>요소를 사용 하여 사용자가 입력해야하는 텍스트를 나타낼 수 있습니다.
+			마찬가지로 <code>&lt;kbd&gt;</code>요소 내에서 <code>&lt;pre&gt;</code>요소를 사용하여 사용자가 입력해야 하는 텍스트를 나타낼 수 있습니다.
 		</p>
 	</section>
 
