--- a/assets/01-html/04-grouping/13-blockquote_element.html
+++ b/assets/01-html/04-grouping/13-blockquote_element.html
@@ -8,7 +8,7 @@
 	<section class="mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			Block Quotation Element는 감싸진 텍스트가 긴 인용문임을 가리킵니다. 일반적으로 이것은 들여쓰기로 렌더링 됩니다.
+			<code>&lt;blockquote&gt;</code>(block quotation) 요소는 감싸진 텍스트가 긴 인용문임을 가리킵니다. 일반적으로 이것은 들여쓰기로 렌더링 됩니다.
 		</p>
 	</section>
 
