- 2. css초급 > 시각적인 속성, 위치속성 완료

--- a/ukncs/tutorials/css/step01/2.10.visual-effects/2.10.overflow.html
+++ b/ukncs/tutorials/css/step01/2.10.visual-effects/2.10.overflow.html
@@ -15,7 +15,7 @@
 			code{font-size:18px;font-weight:700;}
 
 			/* overflow */
-			.visible{overflowv:visible;}
+			.visible{overflow:visible;}
 			.hidden{overflow:hidden;}
 			.scroll{overflow:scroll;}
 			.auto{overflow:auto;}
@@ -24,7 +24,7 @@
 	<body>
 		<div>
 			<p class="visible">
-				<code>overflowv:visible</code>
+				<code>overflow:visible</code>
 				overflow 속성은 해당 요소의 크기에서 내용이 넘칠 경우 어떻게 보여줄것인지 결정.
 				visibility 속성은 해당 요소를 보여줄것인지 아닐지 결정.
 				visibility 속성과 display 속성의 숨김 제어 여부차이점은
@@ -32,7 +32,7 @@
 				visibility 속성은 해당 요소의 영역은 남아있고 내용만 안보이게 처리함.
 			</p>
 			<p class="hidden">
-				<code>overflowv:hidden</code>
+				<code>overflow:hidden</code>
 				overflow 속성은 해당 요소의 크기에서 내용이 넘칠 경우 어떻게 보여줄것인지 결정.
 				visibility 속성은 해당 요소를 보여줄것인지 아닐지 결정.
 				visibility 속성과 display 속성의 숨김 제어 여부차이점은
@@ -40,7 +40,7 @@
 				visibility 속성은 해당 요소의 영역은 남아있고 내용만 안보이게 처리함.
 			</p>
 			<p class="scroll">
-				<code>overflowv:scroll</code>
+				<code>overflow:scroll</code>
 				overflow 속성은 해당 요소의 크기에서 내용이 넘칠 경우 어떻게 보여줄것인지 결정.
 				visibility 속성은 해당 요소를 보여줄것인지 아닐지 결정.
 				visibility 속성과 display 속성의 숨김 제어 여부차이점은
@@ -48,7 +48,7 @@
 				visibility 속성은 해당 요소의 영역은 남아있고 내용만 안보이게 처리함.
 			</p>
 			<p class="auto">
-				<code>overflowv:auto</code>
+				<code>overflow:auto</code>
 				overflow 속성은 해당 요소의 크기에서 내용이 넘칠 경우 어떻게 보여줄것인지 결정.
 				visibility 속성은 해당 요소를 보여줄것인지 아닐지 결정.
 				visibility 속성과 display 속성의 숨김 제어 여부차이점은
