--- a/ukncs/tutorials/css/step01/2.11.visual-formatting-model/2.11.3.float.html
+++ b/ukncs/tutorials/css/step01/2.11.visual-formatting-model/2.11.3.float.html
@@ -145,9 +145,10 @@
 				하단 영역
 			</footer>
 		</div>
+		<br>
 
 		<h2>float 해제 예시</h2>
-		<div class="clear"">
+		<div class="clear">
 			<header>
 				상단 영역
 			</header>
@@ -163,6 +164,7 @@
 				하단 영역
 			</footer>
 		</div>
+		<br>
 
 		<h2>float 해제 3가지 방법</h2>
 		<dl>
