--- a/assets/01-html/05-textLevel/01-a_element.html
+++ b/assets/01-html/05-textLevel/01-a_element.html
@@ -28,7 +28,7 @@
 			</li>
 			<li class="line_code font14 mt_m">
 				<strong>HTML5에서 변경된 사항</strong>
-				<p>HTML 4.01에서 <code>&lt;a&gt;</code> 요소는 하이퍼링크(hyperlink)로도 앵커(anchor)로도 모두 사용할 수 있었습니다.</p>
+				<p>HTML 4.01에서 <code>&lt;a&gt;</code> 요소는 하이퍼링크(hyperlink)로도, 앵커(anchor)로도 모두 사용할 수 있었습니다.</p>
 				<p>하지만 HTML5에서는 언제나 하이퍼링크로만 사용되며, href 속성이 없는 경우에는 나중에 추가될지도 모르는 하이퍼링크를 위한 표시(placeholder) 역할만을 할 뿐입니다.</p>
 			</li>
 		</ol>
@@ -84,15 +84,15 @@
 					</li>
 					<li class="line_code mt_sm font14">
 						<strong>nofollow</strong>
-						<p>유료 링크와 같이 검색 엔진이나 봇(bot) 등이 추적해서는 안 됨을 나타냄.</p>
+						<p>유료 링크와 같이 검색 엔진이나 봇(bot) 등이 추적해서는 안 되는 것을 나타냄.</p>
 					</li>
 					<li class="line_code mt_sm font14">
 						<strong>noreferrer</strong>
-						<p>사용자가 하이퍼링크를 클릭할 때 브라우저가 HTTP 리퍼러 헤더(referer header)를 전송해서는 안 됨을 나타냄.</p>
+						<p>사용자가 하이퍼링크를 클릭할 때 브라우저가 HTTP 리퍼러 헤더(referer header)를 전송해서는 안 되는 것을 나타냄.</p>
 					</li>
 					<li class="line_code mt_sm font14">
 						<strong>noopener</strong>
-						<p>하이퍼링크를 따라 연결되는 어떠한 브라우징 컨텍스트(browsing context)도 오프너(opener)여서는 안 됨을 나타냄.</p>
+						<p>하이퍼링크를 따라 연결되는 어떠한 브라우징 컨텍스트(browsing context)도 오프너(opener)여서는 안 되는 것을 나타냄.</p>
 					</li>
 					<li class="line_code mt_sm font14">
 						<strong>prev</strong>
@@ -138,7 +138,7 @@
 			<div class="ol_lst indent mt_s">
 				<ol>
 					<li>_blank 속성 값 : URL을 새로운 브라우징 문맥에 표시합니다. 보통 새 탭이지만, 사용자가 브라우저 설정을 통해 새 창으로 바꿀 수 있습니다.</li>
-					<li>_self 속성 값 : URL을 현재 브라우징 문맥에 표시합니다. 기본값으로 생략 가능.</li>
+					<li>_self 속성 값 : URL을 현재 브라우징 문맥에 표시합니다. 기본값으로 생략이 가능합니다.</li>
 					<li>_parent 속성 값 : URL을 현재 브라우징 문맥의 부모에 표시합니다. 부모가 존재하지 않으면 _self와 동일하게 행동합니다.</li>
 					<li>_top 속성 값 : URL을 최상단 브라우징 문맥(현재 문맥의 부모면서 자신의 부모가 존재하지 않는, 제일 높은 문맥)에 표시합니다. 부모가 존재하지 않으면 _self와 동일하게 행동합니다.</li>
 				</ol>
