- 3. css중급 > 3.1. CSS 선택자 level 3 작업 중

--- a/assets/02-css/02-cssBeginner/04-css_font.html
+++ b/assets/02-css/02-cssBeginner/04-css_font.html
@@ -225,11 +225,11 @@
 		</p>
 	</section>
 
-	<!-- font 속성 -->
+	<!-- 축약형 속성 -->
 	<section class="txt_ex indent mt_lm">
-		<h2 class="ml_mn"><i class="t_blue">font</i> 속성</h2>
+		<h2 class="ml_mn"><i class="t_blue">축약형</i> 속성</h2>
 		<p class="mt_s">
-			font 속성을 축약형(Shorthand font property) 방식으로 사용. 모든 font 속성을 한번에 사용할 수 있습니다.<br>
+			font 속성을 축약형(Shorthand font property) 방식으로 사용합니다. 모든 font 속성을 한번에 사용할 수 있습니다.<br>
 			축약형 방식으로 사용할 때는 line-height 속성도 같이 사용 가능합니다.
 		</p>
 		<p class="mt_s">
