--- a/ukncs/tutorials/css/step02/3.1.selector/3.1.3.1.structural-pseudo-class-root.html
+++ b/ukncs/tutorials/css/step02/3.1.selector/3.1.3.1.structural-pseudo-class-root.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<ul>
-			<li title="CSS Intro" intro">CSS란?</li>
+			<li title="CSS Intro">CSS란?</li>
 			<li title="Intro CSS">CSS를 사용하는 이유?</li>
 			<li title="Intro CSS Attribute">CSS 문법</li>
 			<li title="Attribute Selector">CSS 속성 선택자</li>
