- 3. css중급 > 3.1. CSS 선택자 level 3 작업 중

--- a/assets/02-css/03-cssMiddleclass/01-css_selectors_level3.html
+++ b/assets/02-css/03-cssMiddleclass/01-css_selectors_level3.html
@@ -214,7 +214,7 @@
 				</div>
 			</div>
 
-			<p class="mt_l">:only-of-type 작업할 차례</p>
+			<p class="mt_l t_blue font16"><strong>:only-of-type 작업할 차례</strong></p>
 
 			<!--
 			<aside class="browser_support mt_m" data-tit="General Sibling Combinator">
