--- a/assets/01-html/05-textLevel/08-s_element.html
+++ b/assets/01-html/05-textLevel/08-s_element.html
@@ -9,9 +9,9 @@
 	<section class="mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			<code>&lt;s&gt;</code> 요소는 텍스트 한가운데 라인(line)을 추가하여 더 이상 정확하지 않거나 관련이 없는 텍스트를 표현할 때 사용합니다.<br>
+			<code>&lt;s&gt;</code> 요소는 텍스트를 가로지르는 라인(line)을 추가하여 더 이상 정확하지 않거나 관련이 없는 텍스트를 표현할 때 사용합니다.<br>
 			<code>&lt;s&gt;</code> 요소를 사용하여 문서에서 대체되거나 삭제된 텍스트를 표현해서는 안 되며, 해당 텍스트는 <code>&lt;del&gt;</code> 요소를 사용해서 표현해야만 합니다.<br>
-			텍스트 한가운데 라인을 추가하는 용도로 사용되던 <code>&lt;s&gt;</code> 요소는 HTML 4.01에서 더 이상 지원되지 않도록 변경되었습니다.<br>
+			텍스트를 가로지르는 라인을 추가하는 용도로 사용되던 <code>&lt;s&gt;</code> 요소는 HTML 4.01에서 더 이상 지원되지 않도록 변경되었습니다.<br>
 			하지만 HTML5에서 <code>&lt;s&gt;</code> 요소는 더 이상 정확하지 않거나 관련이 없는 텍스트를 표현하도록 의미를 재정의하여 다시 추가되었습니다.
 		</p>
 		<div class="line_code mt_m">
