--- a/assets/01-html/05-textLevel/09-cite_element.html
+++ b/assets/01-html/05-textLevel/09-cite_element.html
@@ -13,8 +13,8 @@
 		</p>
 		<ol class="indent mt_s">
 			<li>
-				창작물은 책, 논문, 에세이,시, 악보, 노래, 스크립트, 영화, TV 쇼, 게임, 조각품, 그림, 연극 제작, 연극, 오페라, 뮤지컬, 전시,
-				법적 사례 보고서, 컴퓨터 프로그램, 웹 사이트, 웹 페이지, 블로그 게시물 또는 의견, 포럼 게시물이나 댓글, 트윗, 서면 또는 구두 진술, 등을 포함합니다.
+				창작물은 책, 논문, 에세이, 시, 악보, 노래, 스크립트, 영화, TV 쇼, 게임, 조각품, 그림, 연극 제작, 연극, 오페라, 뮤지컬, 전시,
+				법적 사례 보고서, 컴퓨터 프로그램, 웹 사이트, 웹 페이지, 블로그 게시물 또는 의견, 포럼 게시물이나 댓글, 트윗, 서면 또는 구두 진술 등을 포함합니다.
 			</li>
 			<li>
 				온라인 리소스에 대한 참조를 위해 <code>&lt;cite&gt;</code> 속성을<code>&lt;blockquote&gt;</code> 또는 <code>&lt;q&gt;</code> 요소에 사용하세요.
