--- a/assets/01-html/05-textLevel/16-abbr_element.html
+++ b/assets/01-html/05-textLevel/16-abbr_element.html
@@ -9,8 +9,8 @@
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
 			<code>&lt;abbr&gt;</code> 요소는 약어 또는 두문자어를 나타냅니다. 선택 속성인 title을 사용하면 약어의 전체 글자나 설명을 제공할 수 있습니다.<br>
-			title 속성은 전체 설명만을 가져야 하며 다른건 포함할 수 없습니다.<br>
-			<code>&lt;abbr&gt;</code> 요소는 &quot;W3C&quot;, &quot;HTML&quot;, &quot;ASAP&quot; 등과 같이 단어의 축약형(abbreviation)이나 머리글자로만 된 단어(acronym)를 정의할 때 사용합니다.<br>
+			title 속성은 전체 설명만을 가져야 하며 그 외의 다른 내용은 포함할 수 없습니다.<br>
+			<code>&lt;abbr&gt;</code> 요소는 &quot;W3C&quot;, &quot;HTML&quot;, &quot;ASAP&quot; 등과 같이 단어의 축약형(abbreviation)이나 머리 글자로만 된 단어(acronym)를 정의할 때 사용합니다.<br>
 			이러한 &lt;abbr&gt; 요소는 브라우저나 번역 시스템, 검색 엔진에게 유용한 정보를 줄 수 있습니다.<br>
 			<code>&lt;abbr&gt;</code> 요소 위에 마우스를 올려놓으면 title 속성으로 명시한 단어의 원형이 나타납니다.<br>
 		</p>
