--- a/assets/01-html/05-textLevel/14-code_element.html
+++ b/assets/01-html/05-textLevel/14-code_element.html
@@ -8,7 +8,7 @@
 	<section class="ol_lst font14 mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			<code>&lt;code&gt;</code> 태그는 컴퓨터 코드(code)의 일부분을 나타낼 때 사용합니다.<br>
+			<code>&lt;code&gt;</code> 요소는 컴퓨터 코드(code)의 일부분을 나타낼 때 사용합니다.<br>
 			이때 컴퓨터 코드의 일부분이란 XML 요소의 이름이나 파일 이름, 컴퓨터 프로그램의 코드, 또는 컴퓨터가 인식할 수 있는 어떤 문자열이라도 될 수 있습니다.<br>
 			<code>&lt;code&gt;</code> 요소는 HTML5에서도 여전히 지원되지만, 대신 CSS를 사용하면 더욱 다양한 효과를 얻을 수 있습니다.
 		</p>
