--- a/assets/01-html/05-textLevel/18-time_element.html
+++ b/assets/01-html/05-textLevel/18-time_element.html
@@ -9,7 +9,7 @@
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
 			<code>&lt;time&gt;</code> 요소는 사람이 읽을 수 있는(human-readable) 형태의 날짜와 시간 데이터를 정의할 때 사용합니다.<br>
-			<code>&lt;time&gt;</code> 요소는 대부분의 웹 브라우저에서 특별한 형태로 랜더링되지는 않지만,
+			<code>&lt;time&gt;</code> 요소는 대부분의 웹 브라우저에서 특별한 형태로 렌더링되지는 않지만,
 			검색 엔진의 검색 결과 향상이나 알림 및 스케줄과 같은 사용자 기능을 위해 날짜와 시간 데이터를
 			기계가 읽을 수 있는(machine-readable) 형태로 변환해주는 datetime 속성을 포함할 수 있습니다
 		</p>
@@ -19,7 +19,7 @@
 		</p>
 		<ol class="indent mt_m">
 			<li>
-				datetime 속성 - <b class="t_blue">&lt;time datetime=&quot;날짜와시간&quot;&gt;</b>
+				datetime 속성 - <b class="t_blue">&lt;time datetime=&quot;날짜와 시간&quot;&gt;</b>
 				<div class="line_code mt_s">
 					<p><code>&lt;time&gt;</code> 요소의 날짜와 시간 데이터를 기계가 읽을 수 있는 형태로 명시함.</p>
 				</div>
@@ -30,7 +30,7 @@
 		</div>
 		<ol class="indent_max">
 			<li>24시간 형태로 표현된 시간 데이터</li>
-			<li>그레고리력(Gregorian calendar)으로 표현되는 날짜 데이터 (선택사항으로 시간 및 시간대 데이터를 포함할 수 있음)</li>
+			<li>그레고리력(Gregorian calendar)으로 표현되는 날짜 데이터(선택사항으로 시간 및 시간대 데이터를 포함할 수 있음)</li>
 			<li>유효한 기간 데이터</li>
 		</ol>
 	</section>
