--- a/assets/01-html/05-textLevel/24-ruby_element.html
+++ b/assets/01-html/05-textLevel/24-ruby_element.html
@@ -8,7 +8,7 @@
 	<section class="ol_lst font14 mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			<code>&lt;ruby&gt;</code> 요소는 동아시아 일부 지역의 언어에서 일본어의 후리가나와 같이 해당 문자의 발음이나 설명을 작은 크기의 윗첨자로 알려주는 루비 주석(ruby annotation)을 정의할 때 사용합니다.<br>
+			<code>&lt;ruby&gt;</code> 요소는 동아시아 일부 지역의 언어에서 일본어의 후리가나와 같이 해당 문자의 발음이나 설명을 작은 크기의 윗 첨자로 알려주는 루비 주석(ruby annotation)을 정의할 때 사용합니다.<br>
 			<code>&lt;ruby&gt;</code> 요소는 <code>&lt;rt&gt;</code> 요소만 포함하거나, <code>&lt;rt&gt;</code> 요소와 함께 <code>&lt;rp&gt;</code> 요소도 포함할 수 있습니다.<br>
 			<code>&lt;ruby&gt;</code> 요소는 발음이나 설명이 필요한 한 개 이상의 문자로 구성되며, <code>&lt;rt&gt;</code> 요소는 그에 대한 발음이나 설명을 정의합니다.<br>
 			추가적으로 사용할 수 있는 <code>&lt;rp&gt;</code> 요소는 <code>&lt;ruby&gt;</code> 요소를 지원하지 않는 브라우저에서만 표시될 문자를 정의합니다.
@@ -33,7 +33,7 @@
 		<article class="txt_ex mt_m">
 			<h3>&lt;rt&gt; 요소</h3>
 			<p class="indent">
-				<code>&lt;rt&gt;</code> 요소는 루비 주석(ruby annotation)에서 발음이나 설명을 나타내는 윗첨자를 정의할 때 사용합니다.
+				<code>&lt;rt&gt;</code> 요소는 루비 주석(ruby annotation)에서 발음이나 설명을 나타내는 윗 첨자를 정의할 때 사용합니다.
 			</p>
 		</article>
 
@@ -66,9 +66,9 @@
 		<h3 class="sound_only">상세 설명</h3>
 		<ol>
 			<li>루비 문자 태그</li>
-			<li><code>&lt;ruby&gt;</code>의 내용 중 rt 태그 내의 내용이 상단에 작게 표시됨</li>
-			<li><code>&lt;rp&gt;</code> 내의 내용은 무시됨</li>
-			<li>일본어 후리가나, 중국어 병음 및 주음, 한국어 한자 독음 등에 주로 사용.</li>
+			<li><code>&lt;ruby&gt;</code>의 내용 중 rt 태그 내의 내용이 상단에 작게 표시됩니다.</li>
+			<li><code>&lt;rp&gt;</code> 내의 내용은 무시됩니다.</li>
+			<li>일본어 후리가나, 중국어 병음 및 주음, 한국어 한자 독음 등에 주로 사용합니다.</li>
 		</ol>
 	</section>
 
